# eq-agent

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: build-container.yml
eq/: .gitignore  .mypy.ini  calls.py  endpoints.py  globals.py  main.py  users.py
eq/tests/: test_calls.py  test_endpoints.py  test_notification.json  test_private.pem  test_public.pem  test_users.py
eq/web/: index.html
eq/web/assets/: index-c765ea42.js  index-d8796e2f.css
web/: index.html  package-lock.json  package.json
web/src/: App.vue  main.ts
web/src/components/: Activity.vue  AddEndpointModal.vue  ConfirmDelete.vue  ConfirmQueue.vue  Signup.vue  Verify.vue
web/src/router/: index.ts
